--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>Title</title>
 </head>
 <body>
 <p>My name is Kelton Lowe</p>
-<a href="./">Back</a>
+<a href="./">back</a>
 </body>
 </html>
