--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-test website
-<a href="./about">about</a>
+Test
+<a href="./about">about me</a>
 </body>
 </html>
